--- a/src/button/docs/button.mdx
+++ b/src/button/docs/button.mdx
@@ -1,8 +1,4 @@
----
-category: Components
-type: General
-title: Button
----
+# Button
 
 General button component that can be used to trigger events.
 
