--- a/components/doc-layout/docs/doc-layout.mdx
+++ b/components/doc-layout/docs/doc-layout.mdx
@@ -1,9 +1,14 @@
----
-title: Doc Layout
-category: layout
----
+## When To Use
 
-General button component that can be used to trigger events.
+blah blah blah.
+
+## Examples
+
+< code demo 1 \>
+
+< code demo 2 \>
+
+< code demo 3 \>
 
 ## API
 
