--- a/src/readme.stories.mdx
+++ b/src/readme.stories.mdx
@@ -1,3 +1,7 @@
+import { Meta, Story, Preview } from "@storybook/addon-docs/blocks";
+
+<Meta title="UI/README" />
+
 # ui
 
 > A React component library designed around consistent, and simple web design.
