--- a/src/Intro.stories.mdx
+++ b/src/Intro.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Preview } from "@storybook/addon-docs/blocks";
 
-<Meta title="UI/README" />
+<Meta title="UI/Intro" />
 
 # ui
 
