--- a/src/components/button/stories/button.shapes.stories.mdx
+++ b/src/components/button/stories/button.shapes.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import { action } from "@storybook/addon-actions";
-import Button from "./button";
+import Button from "../button";
 
 <Meta title={"UI/Button/Shapes"} />
 
@@ -14,12 +14,12 @@ markdown documentation.
     <Button>Click Here</Button>
   </Story>
   <Story name="Rounded">
-    <Button shape="rounded">Click Here</Button>
+    <Button borderRadius="8px">Click Here</Button>
   </Story>
   <Story name="Oval">
-    <Button shape="oval">Click Here</Button>
+    <Button borderRadius="24px">Click Here</Button>
   </Story>
-  <Story name="Accent">
-    <Button shape="sharp">Click Here</Button>
+  <Story name="Sharp">
+    <Button borderRadius="0">Click Here</Button>
   </Story>
 </Canvas>
