feat(button with tailwind): new button created with tailwind css
BREAKING CHANGE: theme component no longer exists

--- a/src/components/button/stories/button.stories.mdx
+++ b/src/components/button/stories/button.stories.mdx
@@ -1,16 +1,16 @@
 import { Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import { action } from "@storybook/addon-actions";
-//import Button from "./button";
+import Button from "../button";
 
-<Meta title={"UI/Theme"} />
+<Meta title={"UI/Button"} />
 
 # Get started
 
-With `MDX` we can define a story for `Theme` right in the middle of our
+With `MDX` we can define a story for `Button` right in the middle of our
 markdown documentation.
 
 <Canvas>
   <Story name="Default">
-    <div>Test</div>
+    <Button>Click Here</Button>
   </Story>
 </Canvas>
