migrate to typescript, strip dependencies

--- a/src/components/component/stories/component.stories.mdx
+++ b/src/components/component/stories/component.stories.mdx
@@ -1,16 +1,16 @@
 import { Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import { action } from "@storybook/addon-actions";
-import Button from "../button";
+import { Component } from "../component";
 
-<Meta title={"UI/Button"} />
+<Meta title={"UI/Component"} />
 
 # Get started
 
-With `MDX` we can define a story for `Button` right in the middle of our
+With `MDX` we can define a story for `Component` right in the middle of our
 markdown documentation.
 
 <Canvas>
   <Story name="Default">
-    <Button>Click Here</Button>
+    <Component>Click Here</Component>
   </Story>
 </Canvas>
