--- a/src/Intro.stories.mdx
+++ b/src/Intro.stories.mdx
@@ -1,33 +1,6 @@
-import { Meta, Story, Preview } from "@storybook/addon-docs/blocks";
+import { Meta, Description } from "@storybook/addon-docs/blocks";
+import README from "../README.md";
 
 <Meta title="UI/Intro" />
 
-# ui
-
-> A React component library designed around consistent, and simple web design.
-
-![Build](https://github.com/clutchd/ui/workflows/Build/badge.svg) [![NPM](https://img.shields.io/npm/v/@clutchd/ui.svg)](https://www.npmjs.com/package/@clutchd/ui) [![semantic-release](https://img.shields.io/badge/%20%20%F0%9F%93%A6%F0%9F%9A%80-semantic--release-e10079.svg)](https://github.com/semantic-release/semantic-release) [![Dependabot](https://api.dependabot.com/badges/status?host=github&repo=clutchd/ui)](https://dependabot.com/) [![JavaScript Style Guide](https://img.shields.io/badge/code_style-standard-brightgreen.svg)](https://standardjs.com)
-
-## Install
-
-```bash
-npm install --save @clutchd/ui
-```
-
-## Usage
-
-```jsx
-import React, { Component } from "react";
-
-import MyComponent from "@clutchd/ui";
-
-class Example extends Component {
-  render() {
-    return <MyComponent />;
-  }
-}
-```
-
-## License
-
-MIT © [clutchd](https://github.com/clutchd)
+<Description>{README}</Description>
