Add tests and workflows

--- a/src/components/component/stories/component.stories.mdx
+++ b/src/components/component/stories/component.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta, Story, Canvas, Description } from "@storybook/addon-docs/blocks";
-import { Component } from "../component";
+import Component from "../component";
 import README from "../README.md";
 
 <Meta title={"UI/Component"} />
