feat(link): adds the link component

--- a/src/component/stories/component.stories.mdx
+++ b/src/component/stories/component.stories.mdx
@@ -8,7 +8,7 @@ import README from "../README.md";
 
 <Canvas>
   <Story name="Default">
-    <Component>Click Here</Component>
+    <Component>Default Component</Component>
   </Story>
 </Canvas>
 
