Add default text to inputLabel story

--- a/src/forms/inputLabel/stories/inputLabel.stories.mdx
+++ b/src/forms/inputLabel/stories/inputLabel.stories.mdx
@@ -8,6 +8,6 @@ import README from "../README.md";
 
 <Canvas>
   <Story name="Default">
-    <InputLabel />
+    <InputLabel>Input Label</InputLabel>
   </Story>
 </Canvas>
