Reduce Component dependencies

--- a/src/forms/field/stories/field.stories.mdx
+++ b/src/forms/field/stories/field.stories.mdx
@@ -1,13 +1,13 @@
 import { Meta, Story, Canvas, Description } from "@storybook/addon-docs/blocks";
-import InputField from "../inputField";
+import Field from "../field";
 import README from "../README.md";
 
-<Meta title={"Forms/InputField"} />
+<Meta title={"Forms/Field"} />
 
 <Description>{README}</Description>
 
 <Canvas>
   <Story name="Default">
-    <InputField />
+    <Field />
   </Story>
 </Canvas>
