--- a/src/forms/inputLabel/stories/label.stories.mdx
+++ b/src/forms/inputLabel/stories/label.stories.mdx
@@ -1,13 +1,13 @@
 import { Meta, Story, Canvas, Description } from "@storybook/addon-docs/blocks";
-import InputLabel from "../inputLabel";
+import Label from "../label";
 import README from "../README.md";
 
-<Meta title={"Forms/InputLabel"} />
+<Meta title={"Forms/Label"} />
 
 <Description>{README}</Description>
 
 <Canvas>
   <Story name="Default">
-    <InputLabel>Input Label</InputLabel>
+    <Label>Label</Label>
   </Story>
 </Canvas>
