Fix field story

--- a/src/field/stories/field.stories.mdx
+++ b/src/field/stories/field.stories.mdx
@@ -10,4 +10,11 @@ import README from "../README.md";
   <Story name="Default">
     <Field />
   </Story>
+  <Story name="Select">
+    <Field as="select">
+      <option>Option 1</option>
+      <option>Option 2</option>
+      <option>Option 3</option>
+    </Field>
+  </Story>
 </Canvas>
