Add required decorator to label

--- a/src/label/stories/label.stories.mdx
+++ b/src/label/stories/label.stories.mdx
@@ -10,4 +10,7 @@ import README from "../README.md";
   <Story name="Default">
     <Label>Label</Label>
   </Story>
+  <Story name="Required Label">
+    <Label required>Label</Label>
+  </Story>
 </Canvas>
