--- a/apps/docs/stories/button.stories.mdx
+++ b/apps/docs/stories/button.stories.mdx
@@ -1,4 +1,4 @@
-import { Button } from "@acme/core/src";
+import { Button } from "@clutchd/ui/src";
 import { Meta, Story, Preview, Props } from "@storybook/addon-docs/blocks";
 
 <Meta title="Components/Button" component={Button} />
