--- a/apps/ui/pages/components/component.mdx
+++ b/apps/ui/pages/components/component.mdx
@@ -1,3 +1,5 @@
+import PreviewCode from "../../components/preview-code.mdx";
 import Readme from "../../../../ui/component/README.md";
+import { Component } from "@clutchd/component";
 
 <Readme />
